trying to fix alignment (not complete)

--- a/Portfolio Website/style.css
+++ b/Portfolio Website/style.css
@@ -291,6 +291,18 @@ button:hover img{
     height:auto;
 }
 
+.source#game_link{
+    margin-left: 40%;
+    bottom: %;
+    padding-bottom: 10px;
+    margin-top: 1px;
+}
+
+.button{
+    padding:
+}
+
+
 #contact .source{
     text-align: center;
 }
